docs: add options parameter to start server docs